# minigl

./: CMakeLists.txt
examples/gltf/: gltf.c
examples/gltf/res/landscape/: landscape.blend  landscape.gltf
include/minigl/: frame.h  object.h  rasterizer.h  texture.h  utils.h
src/: frame.c  object.c  rasterizer.c  texture.c  utils.c
tools/png2tex/: main.c
